# alani-spec

./: ABI-draft.md  Alani-Architecture.docx  Alani-Draft.md  Alani-Executive_Summary.docx  Alani.docx  Alani.md  CHANGES-v0.2.0.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  THIRD_PARTY_NOTICES.md  syscalls.md
corpus/: README.md  corpus_index.json
docs/: 01_Alani_Overview.md  02_System_Model.md  03_Design_Principles.md  04_Use_Cases_Requirements.md  05_Architecture_Overview.md  06_Kernel_Architecture.md  07_Cognitive_Subsystem.md  08_Syscall_Interface.md  09_Syscall_Reference.md  10_Kernel_ABI_Rust.md  11_Memory_Management.md  12_Scheduling_Multitasking.md  13_Device_Model.md  14_Cognitive_Devices.md  15_Security_Model.md  16_Security_Mechanisms.md  17_Observability_Tracing.md  18_Auditing_Forensics.md  19_Minimal_Viable_Kernel_MVK.md  20_Differentiation.md  21_Future_Work.md  22_Glossary_Acronyms.md  23_alani_kernel_README.md  24_alani_kernel_Design_Doc.md  (+39 more)
repo-templates/alani-workspace/: Cargo.toml  README.md
repo-templates/individual/alani-audit/: Cargo.toml  README.md
repo-templates/individual/alani-audit/src/: event.rs  hash_chain.rs  lib.rs  query.rs  sink.rs
repo-templates/individual/alani-audit/tests/: smoke.rs
repo-templates/individual/alani-benchmarks/: Cargo.toml  LICENSE  README.md
repo-templates/individual/alani-benchmarks/src/: baselines.rs  lib.rs  metrics.rs  reports.rs  scenarios.rs
repo-templates/individual/alani-benchmarks/tests/: smoke.rs
repo-templates/individual/alani-boot/: Cargo.toml  README.md
repo-templates/individual/alani-boot/src/: early_console.rs  handoff.rs  lib.rs  uefi.rs
repo-templates/individual/alani-boot/tests/: smoke.rs
repo-templates/individual/alani-config/: Cargo.toml  README.md
repo-templates/individual/alani-config/src/: lib.rs  loader.rs  profiles.rs  validation.rs
repo-templates/individual/alani-config/tests/: smoke.rs
repo-templates/individual/alani-corpus/: Cargo.toml  README.md
repo-templates/individual/alani-corpus/.github/workflows/: ci.yml
repo-templates/individual/alani-corpus/data/: README.md
repo-templates/individual/alani-corpus/src/: generator.rs  lib.rs  schema.rs  splits.rs  validator.rs
repo-templates/individual/alani-corpus/tests/: smoke.rs
repo-templates/individual/alani-devices/: Cargo.toml  README.md
repo-templates/individual/alani-devices/src/: classes.rs  dma.rs  interrupt.rs  lib.rs
repo-templates/individual/alani-devices/tests/: smoke.rs
repo-templates/individual/alani-docs/: Cargo.toml  README.md
repo-templates/individual/alani-docs/src/: adr.rs  diagrams.rs  lib.rs  lint.rs  render.rs
repo-templates/individual/alani-docs/tests/: smoke.rs
repo-templates/individual/alani-filesystem/: Cargo.toml  README.md
repo-templates/individual/alani-filesystem/src/: inode.rs  journal.rs  lib.rs  mount.rs  path.rs  vfs.rs
repo-templates/individual/alani-filesystem/tests/: smoke.rs
repo-templates/individual/alani-init/: Cargo.toml  README.md
repo-templates/individual/alani-init/src/: boot_profile.rs  lib.rs  main.rs  restart.rs  service.rs
repo-templates/individual/alani-init/tests/: smoke.rs
repo-templates/individual/alani-ipc/: Cargo.toml  README.md
repo-templates/individual/alani-ipc/src/: channel.rs  lib.rs  port.rs  queue.rs  router.rs  shared_memory.rs
repo-templates/individual/alani-ipc/tests/: smoke.rs
repo-templates/individual/alani-kernel/: Cargo.toml  README.md
repo-templates/individual/alani-kernel/src/: fault.rs  lib.rs  memory.rs  scheduler.rs
repo-templates/individual/alani-kernel/tests/: smoke.rs
repo-templates/individual/alani-models/: Cargo.toml  README.md
repo-templates/individual/alani-models/src/: adapter.rs  compat.rs  lib.rs  manifest.rs  quantization.rs
repo-templates/individual/alani-models/tests/: smoke.rs
repo-templates/individual/alani-network/: Cargo.toml  README.md
repo-templates/individual/alani-network/src/: lib.rs  loopback.rs  packet.rs  protocol.rs  socket.rs
repo-templates/individual/alani-network/tests/: smoke.rs
repo-templates/individual/alani-package/: Cargo.toml  README.md
repo-templates/individual/alani-package/src/: install.rs  lib.rs  package.rs  registry.rs  resolver.rs
repo-templates/individual/alani-package/tests/: smoke.rs
repo-templates/individual/alani-policy/: Cargo.toml  README.md
repo-templates/individual/alani-policy/src/: capability.rs  evaluator.rs  lib.rs  rules.rs  sandbox.rs
repo-templates/individual/alani-policy/tests/: smoke.rs
repo-templates/individual/alani-release/: Cargo.toml  README.md
repo-templates/individual/alani-release/src/: image.rs  lib.rs  main.rs  sbom.rs  signing.rs
repo-templates/individual/alani-release/tests/: smoke.rs
repo-templates/individual/alani-runtime/: Cargo.toml  README.md
repo-templates/individual/alani-runtime/src/: agent.rs  lib.rs  main.rs  process.rs  supervisor.rs
repo-templates/individual/alani-runtime/tests/: smoke.rs
repo-templates/individual/alani-sdk/: Cargo.toml  README.md
repo-templates/individual/alani-sdk/src/: cli.rs  codegen.rs  lib.rs  main.rs  sysroot.rs  templates.rs
repo-templates/individual/alani-sdk/tests/: smoke.rs
repo-templates/individual/alani-sim/: Cargo.toml  README.md
repo-templates/individual/alani-sim/src/: determinism.rs  fake_devices.rs  lib.rs  main.rs  qemu.rs
repo-templates/individual/alani-sim/tests/: smoke.rs
repo-templates/individual/alani-storage/: Cargo.toml  README.md
repo-templates/individual/alani-storage/src/: block.rs  io.rs  lib.rs  partition.rs  volume.rs
repo-templates/individual/alani-storage/tests/: smoke.rs
repo-templates/individual/alani-tests/: Cargo.toml  README.md
repo-templates/individual/alani-tests/src/: conformance.rs  harness.rs  lib.rs  regression.rs
repo-templates/individual/alani-tests/tests/: smoke.rs
repo-templates/individual/alani-userspace/: Cargo.toml  README.md
repo-templates/individual/alani-userspace/src/: agents.rs  apps.rs  examples.rs  fixtures.rs  lib.rs
repo-templates/individual/alani-userspace/tests/: smoke.rs
(+124 files in other folders)
