[package]
name = "alani-audit"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Audit team"
architectural_dependencies = ["alani-lib", "alani-protocol", "alani-observability", "alani-storage"]
aliases = []
