[package]
name = "alani-benchmarks"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Performance team"
architectural_dependencies = ["alani-abi", "alani-ipc", "alani-storage", "alani-filesystem", "alani-cognition", "alani-memory", "alani-sim"]
aliases = []
