[package]
name = "alani-boot"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Platform team"
architectural_dependencies = ["alani-abi", "alani-platform", "alani-config"]
aliases = []
