[package]
name = "alani-config"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Platform and runtime teams"
architectural_dependencies = ["alani-protocol"]
aliases = []
