[package]
name = "alani-corpus"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Data and cognition teams"
architectural_dependencies = ["alani-protocol", "alani-config", "alani-policy"]
aliases = []
