[package]
name = "alani-devices"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Device team"
architectural_dependencies = ["alani-lib", "alani-abi", "alani-platform", "alani-observability"]
aliases = []
