[package]
name = "alani-filesystem"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Storage and filesystem team"
architectural_dependencies = ["alani-abi", "alani-protocol", "alani-storage", "alani-policy", "alani-audit", "alani-observability"]
aliases = []
