[package]
name = "alani-ipc"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Kernel and runtime teams"
architectural_dependencies = ["alani-abi", "alani-protocol", "alani-policy", "alani-observability"]
aliases = []
