[package]
name = "alani-policy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Security and policy teams"
architectural_dependencies = ["alani-abi", "alani-protocol", "alani-config"]
aliases = []
