[package]
name = "alani-release"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Release engineering team"
architectural_dependencies = ["alani-package", "alani-sdk", "alani-docs", "alani-corpus", "alani-config"]
aliases = ["alani-image"]
