[package]
name = "alani-runtime"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Runtime team"
architectural_dependencies = ["alani-lib", "alani-abi", "alani-protocol", "alani-ipc", "alani-config", "alani-security", "alani-audit", "alani-observability"]
aliases = []
