[package]
name = "alani-sdk"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Developer experience team"
architectural_dependencies = ["alani-config", "alani-protocol", "alani-docs"]
aliases = []
