[package]
name = "alani-sim"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Simulation team"
architectural_dependencies = ["alani-platform", "alani-devices", "alani-storage", "alani-network", "alani-observability", "alani-boot"]
aliases = ["alani-emulator"]
