[package]
name = "alani-storage"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Storage team"
architectural_dependencies = ["alani-abi", "alani-devices", "alani-observability"]
aliases = []
