[package]
name = "alani-userspace"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.alani]
tier = "MVK required"
owner = "Userspace team"
architectural_dependencies = ["alani-runtime", "alani-lib", "alani-cognition", "alani-protocol"]
aliases = []
